Add /login endpoint and JWT tokens
